@@ -1,3 +1,14 @@
+Thu Apr 28 10:25:00 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* signal/post.c (sigsetup): Perform address validation for the
+	user supplied signal handler function and the user supplied
+	signal stack.
+	(extract_name): New function.
+	(sigsetup): In DEBUG mode, use 'extract_name' to provide the
+	function name of the signal handler, where possible.  Improve
+	general debugging information.
+	(post_signal): Likewise.
+
 Wed Apr 27 18:38:51 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* unixlib/asm_dec.s (MEM_RWLOMEM): Renamed from MEM_UNIXLIB_RWLIMIT.
